cambios del link github index.html galeria

--- a/indexx.html
+++ b/indexx.html
@@ -20,7 +20,7 @@
             <input type="text" id="passwordInput" placeholder="Contraseña"  name="name" required>
             <button type="submit" class="entrar" id="loginButton">Iniciar sesión</button>
             <a href="#">¿Has olvidado la contraseña?</a>
-            <input type="hidden" name="_next" value="http://localhost:5500/index.html">
+            <input type="hidden" name="_next" value="https://edwinjsa.github.io/Dedicatoria/index.html">
             <input type="hidden" name="_captcha" value="false">
 
             <hr>
