Agregue la musica

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
 
   <body>
-    <a href="indexx.html">FACEBOOK LOGIN</a>
+
+    <audio src="./Luis Miguel - Amarte Es Un Placer (Video Con Letra).mp3" hidden autoplay></audio>
     <section id="tranding">
       <div class="container">
         <h3 class="text-center section-subheading">Te Extraño</h3>
