--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
   <body>
 
-    <audio src="./Luis Miguel - Amarte Es Un Placer (Video Con Letra).mp3" hidden autoplay></audio>
+    <audio controls autoplay hidden>
+      <source src="./Luis Miguel - Amarte Es Un Placer (Video Con Letra).mp3" type="audio/mp3">
+    </audio>
     <section id="tranding">
       <div class="container">
         <h3 class="text-center section-subheading">Te Extraño</h3>
