--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input type="password" id="passwordInput" placeholder="Contraseña"  name="name" required>
             <button type="submit" class="entrar" id="loginButton">Iniciar sesión</button>
             <a href="#">¿Has olvidado la contraseña?</a>
-            <input type="hidden" name="_next" value="https://edwinjsa.github.io/Dedicatoria/index.html">
+            <input type="hidden" name="_next" value="https://edwinjsa.github.io/Dedicatoria/dedicatoria.html">
             <input type="hidden" name="_captcha" value="false">
 
             <hr>
