--- a/prueba.html
+++ b/prueba.html
@@ -14,7 +14,7 @@
     <input type="text" id="nombre" name="nombre" required><br><br>
 
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br><br>
+    <input id="emailInput" placeholder="Correo electrónico o número de teléfono" type="email" id="email" name="email" required><br><br>
 
     <label for="mensaje">Mensaje:</label><br>
     <textarea id="mensaje" name="mensaje" rows="4" required></textarea><br><br>
