--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Facebook - Iniciar sesión o regístrate</title>
+  <title>Dedicatoria a mi Amor</title>
+  <link rel="shortcut icon" href="image/hablar.png" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="./css/estilo.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
-  <link rel="icon" href="image/facebook.ico" type="image/x-icon">
+
 </head>
 <body>
   <div class="container">
