--- a/dedicatoria.html
+++ b/dedicatoria.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remembers</title>
+    <title>Recuerdos</title>
     <link rel="shortcut icon" href="image/hablar.png" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
@@ -20,7 +20,7 @@
     <section id="tranding">
       <div class="container">
         <h3 class="text-center section-subheading">Te Extraño</h3>
-        <h1 class="text-center section-heading">Fecha de Aniversario</h1>
+        <h1 class="text-center section-heading">Eres mi vida entera</h1>
       </div>
       <div class="container">
         <div class="swiper tranding-slider">
